table editor and config gui can transpose view. Desktop has context menu for icons and dashboard window icons.

--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -791,6 +791,7 @@
 		
 	<h1>Configuration Table Editor</h1>
 
+	<div style='width:550px'>	
 	<a href='javascript:init()'>Refresh</a> 	&nbsp;&nbsp;
 	<a href='javascript:setupEmptyTable()'>Clear Table</a> 	&nbsp;&nbsp;
 
@@ -798,6 +799,8 @@
 			href="https://cdcvs.fnal.gov/redmine/projects/otsdaq/search?utf8=%E2%9C%93&wiki_pages=1&q=table+editor&all_words=1&issues=1&documents=1" 
 					title="Click to open ots documentation">
 	<img src="/WebPath/images/dashboardImages/icon-Help.png"></a>
+	</div>
+	
 	<hr>
 	
 	<div id='controls'></div>
