--- a/WebGUI/html/EditSecurity.html
+++ b/WebGUI/html/EditSecurity.html
@@ -8,7 +8,9 @@
 <script type="text/JavaScript" src="/WebPath/js/EditSecurity.js"></script>
 <link rel="stylesheet" type="text/css" href="/WebPath/css/EditSecurity.css">
 <style>
-
+	a {
+		color:white;
+	}
 </style>
 </head>
 
@@ -26,7 +28,8 @@
   	<div class="details">
   		<span class="heading">No Security</span>
   		<hr />
-  		<p>Users do not have to provide any authentication to access the OTS software and server. <b>Anybody with the address of the server</b> can access it.</p>		
+  		<p>Users do not have to provide any authentication to access the OTS software and server.
+		<br><br><b>Anybody with the address of the server can access it.</b></p>		
   		<a href="#" onclick="setSecurity('NoSecurity')" class="button">Select</a>
   	</div>
   	
@@ -86,9 +89,13 @@
 	<div class="glow" id="ResetSecurityUserData">
 	<a href="#"  class="overlay round"></a>
 	<div class="details">
-		<span class="heading">Reset Security User Data</span>
+		<span class="heading">Reset User Data</span>
 		<hr />
-		<p>Click this button to reset all security user data.</p>		
+		<p>Click this button to reset all user data 
+		(i.e. delete accounts, passwords, preferences, etc.). This is irreversible.
+		<br>
+		<br>
+  		<b>Make sure this is really what you want to do before clicking!!</b></p>		
 		<a href="#" onclick="confirm()" class="button">Select</a>		
 	</div>
 	<div class="bg"></div>
