Fixed the bug while opening windows in normal mode

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -749,7 +749,7 @@
 			</div>
 		</div>
 		<div id="popupIllegalNotes" class="smallPopup">
-			<h4>Macro notes cannot contain special characters.</h4>
+			<h4>Macro notes cannot contain "#", "@" or ".."</h4>
 		    <div class="buttongroup">
 			  <center>
 				<button onclick="hideSmallPopup(this)">Okay</button>
