--- a/WebGUI/html/Supervisor.html
+++ b/WebGUI/html/Supervisor.html
@@ -15,6 +15,8 @@
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Desktop.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/js_lib/SimpleContextMenu.js"></script>
+		
 		<script type="text/JavaScript" src="/WebPath/js/DesktopDashboard.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/DesktopWindow.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/DesktopIcons.js"></script>
