--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -1707,21 +1707,43 @@
 		}
 		
 		//activateSystemConfig ~
-		function activateSystemConfig(groupName, groupKey)
+		function activateSystemConfig(groupName, groupKey, ignoreWarnings)
 		{
 			DesktopContent.XMLHttpRequest("Request?RequestType=activateConfigGroup&groupName=" + 
-					groupName + "&groupKey=" + groupKey,
+					groupName + "&groupKey=" + groupKey +
+					(ignoreWarnings?("&ignoreWarnings=" + ignoreWarnings):""),
 					"",activateSystemConfigHandler,true);
 		}
 		
 		//activateSystemConfigHandler ~
 		function activateSystemConfigHandler(req,displayErrors)
 		{	
+			var withWarningsStr = "";
+			var name,key; //only filled in if withWarningsStr != ""
 			if(displayErrors)
 			{
 				var err = DesktopContent.getXMLValue(req,"Error");
 				if(err) 
+				{
 					Debug.log(err,Debug.HIGH_PRIORITY);
+
+					//try to find group name and key
+					//	if found, show activate with warnings button
+					var i = err.indexOf("activating group '") + ("activating group '").length;
+					name = err.substr(i,err.indexOf("'",i)-i).split("(");
+					if(name.length == 2)
+					{
+						key = name[1].split(")")[0];
+						name = name[0];					
+												
+						//add ignore warnings Activate link
+						withWarningsStr += " <a href='javascript:activateSystemConfig(\"" + 
+								name +
+								"\",\"" + key + "\",1);'>"; //ignore warnings
+						withWarningsStr += "Activate " + 
+								name + "(" + key + ") w/warnings ignored</a>";
+					}
+				}
 			}
 			
 			var activeConfigGroups = [
@@ -1759,11 +1781,23 @@
 				str += "<br>";
 			}
 			
+			if(withWarningsStr != "")
+				str += withWarningsStr;
+			
 			if(str != oldStr)
 			{
 				if(!_firstTimeSilentActive) //only popup after the first time
 				{
-					if(thereIsAnEmpty) //may have been a deactivationg (due to error?)
+					if(withWarningsStr != "")
+						Debug.log("Group " + name + "(" + key + ") was not activated.\n\n" +
+								"Please see detailed Warnings and Errors below. " +
+								"You can try to activate " + 
+								"with warnings ignored " + 
+								"<label style='font-weight:bold;text-decoration:underline;font-size:inherit;'>" +
+								"(MAKE SURE YOU KNOW WHY!)</label> by clicking '<u>Activate " + 
+								name + "(" + key + ") w/warnings ignored</u>' " +
+								"at the top of the page.",Debug.HIGH_PRIORITY);
+					else if(thereIsAnEmpty) //may have been a deactivationg (due to error?)
 						Debug.log("Note: There was a change in the active groups (check the top of the page)!",
 								Debug.INFO_PRIORITY);
 					else //must have been an activation
