added user lock always in top right

--- a/WebGUI/html/UserSettings.html
+++ b/WebGUI/html/UserSettings.html
@@ -900,7 +900,8 @@
 				var data = "";
 				data += "lock=" + (lock?"1":"0") + "&";
 				data += "username=" + _accountsArray[0][i].getAttribute('value');
-				DesktopContent.XMLHttpRequest("Request?RequestType=setUserWithLock&accounts=1", data, settingsRequestHandler);				
+				DesktopContent.XMLHttpRequest("Request?RequestType=setUserWithLock&accounts=1",
+						data, settingsRequestHandler);				
 			}
 		</script>
 		
